[FIX] module controls: use correct parameter (id instead of name) so that the controls work; also show controls when no box is used; add clearfix in certain places to avoid module formatting spilling onto following modules in some cases when module controls are used; restrict showing of controls to left and right columns; convert to forms using post method; only show controls on hover and take less space by putting in a single row

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1434,10 +1434,13 @@ a.flipmodtitle .icon {
   padding-left: 1.3em; }
 
 .modcontrols {
-  display: block;
-  float: right;
-  width: 64px;
-  height: 16px; }
+  visibility: hidden;
+  float: right; }
+  .modcontrols > div > button.btn-link {
+    padding: 0; }
+
+.module:hover .modcontrols {
+  visibility: visible; }
 
 .box-minichat {
   width: 100%; }
